--- a/hero-button-section.html
+++ b/hero-button-section.html
@@ -1,7 +1,7 @@
 <div class="container">
 <div id="homepage-donation-box" class="row">
   <div class="col" style="text-align: center;">
-    <a href="https://uk.virginmoneygiving.com/fundraiser-display/showROFundraiserPage?userUrl=DavidCollinson5&pageUrl=1"><button>Make A Donation</button></a>
+    <a target="_blank" href="https://uk.virginmoneygiving.com/fundraiser-display/showROFundraiserPage?userUrl=DavidCollinson5&pageUrl=1"><button>Make A Donation</button></a>
   </div>
 </div>
 </div>
